18/08/2025 : - Add Catalog model - Add Marketplace model - Add interface of both

--- a/package.json
+++ b/package.json
@@ -12,7 +12,10 @@
     "db:migrate:prod": "prisma migrate deploy",
     "db:studio": "prisma studio",
     "db:reset": "prisma migrate reset",
-    "dev": "nodemon src/index.ts",
+    "dev:http": "cross-env ENABLE_HTTPS=false nodemon src/index.ts",
+    "dev:https": "cross-env ENABLE_HTTPS=true nodemon src/index.ts",
+    "generate-ssl": "node scripts/generate-ssl.js",
+    "check-ssl": "node scripts/check-ssl.js",
     "clean": "rm -rf dist",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
@@ -54,6 +57,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
+    "cross-env": "^10.0.0",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
