--- a/package.json
+++ b/package.json
@@ -12,8 +12,14 @@
     "db:migrate:prod": "prisma migrate deploy",
     "db:studio": "prisma studio",
     "db:reset": "prisma migrate reset",
+    "db:seed": "tsx prisma/seed.ts",
     "dev:http": "cross-env ENABLE_HTTPS=false nodemon src/index.ts",
-    "dev:https": "cross-env ENABLE_HTTPS=true nodemon src/index.ts",
+    "dev": "nodemon src/index.ts",
+    "test": "jest --passWithNoTests --detectOpenHandles",
+    "test:watch": "jest --watchAll",
+    "test:cov": "jest --coverage",
+    "test:integration": "jest tests/integration",
+    "test:unit": "jest src/",
     "generate-ssl": "node scripts/generate-ssl.js",
     "check-ssl": "node scripts/check-ssl.js",
     "clean": "rm -rf dist",
@@ -45,15 +51,18 @@
     "uuid": "^11.1.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^9.9.0",
     "@types/bcryptjs": "^2.4.6",
     "@types/compression": "^1.8.1",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
-    "@types/node": "^24.2.1",
+    "@types/node": "^24.3.0",
     "@types/pg": "^8.15.5",
     "@types/redis": "^4.0.10",
+    "@types/supertest": "^6.0.3",
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
@@ -61,11 +70,15 @@
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "jest": "^30.0.5",
     "node-pg-migrate": "^8.0.3",
     "nodemon": "^3.1.10",
     "prettier": "^3.6.2",
     "prisma": "^6.14.0",
+    "supertest": "^7.1.4",
+    "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.4",
     "typescript": "^5.9.2"
   }
 }
