22/08/2025 : - fix error - complete authorization - add role and permission repository

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "db:reset": "prisma migrate reset",
     "db:seed": "tsx prisma/seed.ts",
     "dev:http": "cross-env ENABLE_HTTPS=false nodemon src/index.ts",
-    "dev": "nodemon src/index.ts",
-    "debug": "nodemon --inspect-brk src/index.ts",
+    "dev": "nodemon -r ts-node/register src/index.ts",
+    "debug": "nodemon -r ts-node/register --inspect-brk src/index.ts",
     "test": "jest --passWithNoTests --detectOpenHandles",
     "test:watch": "jest --watchAll",
     "test:cov": "jest --coverage",
