--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
+    "cloudinary": "^2.7.0",
     "compression": "^1.8.1",
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
@@ -48,6 +49,7 @@
     "joi": "^18.0.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "pg": "^8.16.3",
     "redis": "^5.8.1",
     "uuid": "^11.1.0"
@@ -61,6 +63,7 @@
     "@types/jest": "^30.0.0",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
     "@types/pg": "^8.15.5",
     "@types/redis": "^4.0.10",
