--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "cors": "^2.8.5",
     "dayjs": "^1.11.13",
     "dotenv": "^17.2.1",
+    "ethers": "^6.15.0",
     "express": "^5.1.0",
     "express-rate-limit": "^8.0.1",
     "helmet": "^8.1.0",
@@ -50,6 +51,7 @@
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
     "multer": "^2.0.2",
+    "node-cron": "^4.2.1",
     "pg": "^8.16.3",
     "redis": "^5.8.1",
     "uuid": "^11.1.0"
@@ -65,6 +67,7 @@
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.3.0",
+    "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.15.5",
     "@types/redis": "^4.0.10",
     "@types/supertest": "^6.0.3",
