--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "db:migrate:prod": "prisma migrate deploy",
     "db:studio": "prisma studio",
     "db:reset": "prisma migrate reset",
-    "db:seed": "tsx prisma/seed.ts",
+    "db:seed": "tsx prisma/seed_products.ts",
     "dev:http": "cross-env ENABLE_HTTPS=false nodemon src/index.ts",
     "dev": "nodemon -r ts-node/register src/index.ts",
     "debug": "nodemon -r ts-node/register --inspect-brk src/index.ts",
@@ -35,6 +35,7 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.17.0",
+    "axios": "^1.12.2",
     "bcryptjs": "^3.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
@@ -53,6 +54,7 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "pg": "^8.16.3",
+    "puppeteer": "^24.25.0",
     "redis": "^5.8.1",
     "uuid": "^11.1.0"
   },
