--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/morgan": "^1.9.10",
     "@types/multer": "^2.0.0",
-    "@types/node": "^24.3.0",
+    "@types/node": "^24.9.1",
     "@types/node-cron": "^3.0.11",
     "@types/pg": "^8.15.5",
     "@types/redis": "^4.0.10",
@@ -76,6 +76,7 @@
     "@types/uuid": "^10.0.0",
     "@typescript-eslint/eslint-plugin": "^8.39.1",
     "@typescript-eslint/parser": "^8.39.1",
+    "chai": "^6.2.0",
     "cross-env": "^10.0.0",
     "eslint": "^9.33.0",
     "eslint-config-prettier": "^10.1.8",
@@ -89,6 +90,6 @@
     "ts-jest": "^29.4.1",
     "ts-node": "^10.9.2",
     "tsx": "^4.20.4",
-    "typescript": "^5.9.2"
+    "typescript": "^5.9.3"
   }
 }
